Fix admonition spacing

--- a/static/styles/document.pcss
+++ b/static/styles/document.pcss
@@ -87,6 +87,44 @@
       }
     }
   }
+
+  & .admonition {
+    background: #333;
+    border: 1px solid #444;
+    border-radius: 2px;
+
+    + .admonition {
+      margin-top: 1rem;
+    }
+
+    & p {
+      margin: 0;
+      padding: 2px 5px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    & ul {
+      padding-left: 1.75rem;
+    }
+
+    & .admonition-title {
+      border-radius: 2px 2px 0 0;
+      padding: 1px 5px;
+      background: #15495d;
+      border-bottom: 1px solid #444;
+    }
+
+    &.seealso .admonition-title {
+      background: #344c23;
+    }
+
+    &.warning .admonition-title {
+      background: #4c2323;
+    }
+  }
 }
 
 .headerlink {
@@ -108,44 +146,6 @@
 
 .rubric {
   font-weight: 600;
-}
-
-.admonition {
-  background: #333;
-  border: 1px solid #444;
-  border-radius: 2px;
-
-  + .admonition {
-    margin-top: 1rem;
-  }
-
-  & p {
-    margin: 0;
-    padding: 2px 5px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  & ul {
-    padding-left: 1.75rem;
-  }
-
-  & .admonition-title {
-    border-radius: 2px 2px 0 0;
-    padding: 1px 5px;
-    background: #15495d;
-    border-bottom: 1px solid #444;
-  }
-
-  &.seealso .admonition-title {
-    background: #344c23;
-  }
-
-  &.warning .admonition-title {
-    background: #4c2323;
-  }
 }
 
 .prev-next-links {
